--- a/vignettes/mutation.Rmd
+++ b/vignettes/mutation.Rmd
@@ -35,7 +35,7 @@ Pipelines options are: `muse`, `varscan2`, `somaticsniper`, `mutect`. For more i
 [GDC docs](https://docs.gdc.cancer.gov/Data/Bioinformatics_Pipelines/DNA_Seq_Variant_Calling_Pipeline/).
 
 ```{r results = 'hide', echo=TRUE, message=FALSE, warning=FALSE}
-maf <- GDCquery_Maf("CHOL", pipelines = "muse")
+maf <- GDCquery_Maf("TCGA-CHOL", pipelines = "muse")
 ```
 ```{r  echo = TRUE, message = FALSE, warning = FALSE}
 # Only first 50 to make render faster
@@ -88,7 +88,7 @@ To visualize the data you can use the Bioconductor package [maftools](https://bi
 
 ```{r  results = "hide",echo = TRUE, message = FALSE, warning = FALSE}
 library(maftools)
-maf <- GDCquery_Maf("CHOL", pipelines = "muse") %>% read.maf(removeSilent = TRUE, useAll = FALSE)
+maf <- GDCquery_Maf("TCGA-CHOL", pipelines = "muse") %>% read.maf(removeSilent = TRUE, useAll = FALSE)
 datatable(getSampleSummary(maf),
           filter = 'top',
           options = list(scrollX = TRUE, keys = TRUE, pageLength = 5), 
